// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common - Header - util - UserItemButton should match snapshot 1`] = `
<div>
  <button
    class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root css-14tj01d-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    test
  </button>
</div>
`;

exports[`common - Header - util - UserItemButton should match snapshot with isSignOut 1`] = `
<div>
  <button
    class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root css-1n63xpb-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
    >
      <svg>
        sign-out.svg
      </svg>
    </span>
    test
  </button>
</div>
`;
